--- a/assignment1/styles.css
+++ b/assignment1/styles.css
@@ -1,45 +1,35 @@
-@keyframes bounceIn {
-    0% {
-      transform: scale(0.1);
-      opacity: 0;
-    }
-    60% {
-      transform: scale(1.2);
-      opacity: 1;
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
+
 body{
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100vh;
-    background-image: url(media/master.gif);
+    background-image: url(media/menu.gif);
     background-size: cover;
     background-position: center;
 }
 audio{
     position: absolute;
     mix-blend-mode: soft-light;
+    z-index: 10;
 }
 
 #container{
     width: 100%;
     height: 100vh;
-    background-image: url(media/chain.png);
+    background-image: url(media/hearts.gif);
     background-size: cover;
-    background-blend-mode: overlay;
+    background-blend-mode:soft-light;
     background-position: center;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: repeat(4, 1fr);
+    opacity:.6;
 }
 
 #sprite1{
     grid-column: 2 / 3;
-    grid-row: 3 / 5;
+    grid-row: 2 / 4;
     width: 100%;
     height: 100%;
     object-fit: fill;
@@ -49,7 +39,7 @@ audio{
 
 #sprite2{
     grid-column: 4 / 5;
-    grid-row: 3 / 5;
+    grid-row: 2 / 4;
     width: 100%;
     height: 100%;
     object-fit: fill;
@@ -59,18 +49,18 @@ audio{
     
 }
 
-#blade1{
+.b1{
     grid-column: 2 / 3;
-    grid-row: 2 / 4;
+    grid-row: 1 / 3;
     width: 100%;
     height: 100%;
     object-fit: contain;
     mix-blend-mode: luminosity;
-    transform: rotate(75deg);
+    transform: rotate(105deg);
     
 }
 
-#blade2{
+.b2{
     
     grid-column: 3 / 4;
     grid-row: 3 / 5;
@@ -80,24 +70,32 @@ audio{
     mix-blend-mode: luminosity;
 }
 
-#blade3{
+.b3{
     grid-column: 4 / 5;
-    grid-row: 2 / 4;
+    grid-row: 1 / 3;
     width: 100%;
     height: 100%;
     object-fit: contain;
-    transform: rotate(-75deg);
+    transform: rotate(-105deg);
     mix-blend-mode: luminosity;
 }
 
-
-
-.animation{
-    grid-column: 3 / 4;
-    grid-row: 2 / 4;
-    mix-blend-mode: luminosity;
+.blade{
+    transition-property: transform;
+    transition-duration: 1s;
 }
 
-.animation:hover{
-    filter: blur(5px);
+.b1:hover{
+    transform: rotate(180deg);
+    transition-duration: 2s;
+}
+
+.b2:hover{
+    transform: rotate(180deg);
+    transition-duration: 2s;
+}
+
+.b3:hover{
+    transform: rotate(-180deg);
+    transition-duration: 2s;
 }
