--- a/assignment1/styles.css
+++ b/assignment1/styles.css
@@ -7,6 +7,7 @@ body{
     background-image: url(media/menu.gif);
     background-size: cover;
     background-position: center;
+    overflow: hidden;
 }
 audio{
     position: absolute;
